--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "iconv-lite": "^0.6.3",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
