--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "telegram-typings": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
